# bcos-framework

./: .clang-format  .gitignore  Block.proto  BlockHeader.proto  CMakeLists.txt  README.md
.github/workflows/: workflow.yml
bcos-cmake-scripts/: Options.cmake  SearchTestCases.cmake
cmake/: CopyInclude.cmake  InstallInclude.cmake  ProjectProtocolBuffer.cmake  config.cmake
doc/: README_CN.md
interfaces/: CMakeLists.txt
interfaces/amop/: AMOPInterface.h
interfaces/consensus/: ConsensusInterface.h  ConsensusNode.h  ConsensusNodeInterface.h  ConsensusTypeDef.h
interfaces/crypto/: CommonType.h  CryptoSuite.h  Hash.h  KeyInterface.h  KeyPairInterface.h  Signature.h  SymmetricEncryption.h
interfaces/dispatcher/: DispatcherInterface.h  SchedulerInterface.h
interfaces/executor/: ContractContainerInterface.h  ContractManagerInterface.h  ContractStatus.h  ExecutionMessage.h  ExecutionParams.h  ExecutionResult.h  ExecutorInterface.h  ParallelExecutorInterface.h  ParallelManagerInterface.h  ParallelTransactionExecutorInterface.h  PrecompiledTypeDef.h  StateInterface.h  TableHash.h
interfaces/front/: FrontServiceInterface.h
interfaces/gateway/: GatewayInterface.h  GatewayTypeDef.h
interfaces/ledger/: LedgerConfig.h  LedgerInterface.h  LedgerTypeDef.h  ledgerInterface.h
interfaces/libcrypto/: CryptoSuite.h  Hash.h  Signature.h
interfaces/multigroup/: ChainInfo.h  ChainInfoFactory.h  ChainNodeInfo.h  ChainNodeInfoFactory.h  GroupInfo.h  GroupInfoFactory.h  GroupManagerInterface.h  GroupTypeDef.h  NodeInfo.h  NodeInfoFactory.h
interfaces/p2p/: EndPointInterface.h  P2PInterface.h
interfaces/protocol/: Block.h  BlockFactory.h  BlockHeader.h  BlockHeaderFactory.h  CommonError.h  ExecutionParams.h  ExecutionResult.h  Protocol.h  ProtocolTypeDef.h  ServiceDesc.h  Transaction.h  TransactionFactory.h  TransactionMetaData.h  TransactionReceipt.h  TransactionReceiptFactory.h  TransactionSubmitResult.h  TransactionSubmitResultFactory.h
interfaces/rpc/: HandshakeRequest.h  RPCInterface.h
interfaces/sealer/: SealerInterface.h
interfaces/storage/: Common.h  DB.h  DBInterface.h  Entry.h  Storage.h  StorageInterface.h  Table.h  TableInterface.h
interfaces/sync/: BlockSyncInterface.h  SyncInterface.h
interfaces/txpool/: TxPoolInterface.h  TxPoolTypeDef.h
libcodec/: CMakeLists.txt  ContractABIType.h
libcodec/abi/: ContractABICodec.cpp  ContractABICodec.h  ContractABIType.cpp  ContractABIType.h
libcodec/scale/: Common.h  Exceptions.h  FixedWidthIntegerCodec.h  ScaleDecoderStream.cpp  ScaleDecoderStream.h  ScaleEncoderStream.cpp  ScaleEncoderStream.h
libexecutor/: NativeExecutionMessage.h
libprotocol/: CMakeLists.txt  Common.h  Exceptions.h  LogEntry.h  NativeTransactionMetaData.h  ParallelMerkleProof.cpp  ParallelMerkleProof.h  TransactionOnChainResult.h  TransactionStatus.cpp  TransactionStatus.h  TransactionSubmitResultFactoryImpl.h  TransactionSubmitResultImpl.h  TransactionWrapper.cpp  TransactionWrapper.h
libprotocol/bcos-proto/: Block.proto  BlockHeader.proto  README.md  Transaction.proto  TransactionReceipt.proto
libprotocol/protobuf/: CMakeLists.txt  PBBlock.cpp  PBBlock.h  PBBlockFactory.h  PBBlockHeader.cpp  PBBlockHeader.h  PBBlockHeaderFactory.h  PBTransaction.cpp  PBTransaction.h  PBTransactionFactory.h  PBTransactionMetaData.h  PBTransactionReceipt.cpp  PBTransactionReceipt.h  PBTransactionReceiptFactory.h
libsealer/: Common.h  SealFactory.cpp  Sealer.cpp  Sealer.h  SealerConfig.h  SealerFactory.cpp  SealerFactory.h  SealingManager.cpp  SealingManager.h
libstorage/: CMakeLists.txt  StateStorage.cpp  StateStorage.h  StorageInterface.cpp  Table.cpp
libsync/: CMakeLists.txt  SyncConfig.h
libsync/interfaces/: TxsSyncMsgFactory.h  TxsSyncMsgInterface.h
libsync/protocol/PB/: TxsSyncMsg.cpp  TxsSyncMsg.h  TxsSyncMsgFactoryImpl.h
libtable/: CMakeLists.txt  StateStorage.cpp  StateStorage.h  StorageInterface.cpp  Table.cpp  Table.h  TableFactory.h  TableStorage.cpp  TableStorage.h
libtool/: ConsensusNode.h  Exceptions.h  LedgerConfigFetcher.cpp  LedgerConfigFetcher.h  NodeConfig.cpp  NodeConfig.h
libutilities/: Base64.cpp  BoostLog.h  BoostLogInitializer.cpp  BoostLogInitializer.h  CMakeLists.txt  Common.cpp  Common.h  ConcurrentCOW.h  ConcurrentQueue.h  DataConvertUtility.h  Error.h  Exceptions.h  FixedBytes.h  JsonDataConvertUtility.h  KVStorageHelper.h  Log.h  TarsLog.h  ThreadPool.h  Timer.cpp  Timer.h  Worker.cpp
shell/: check-commit.sh
test/: CMakeLists.txt
test/bcos-test/libutils/: TestPromptFixture.h
test/tools/libutils/: TestPromptFixture.cpp  TestPromptFixture.h
test/unittests/common/: HashImpl.h  SignatureImpl.h
test/unittests/faker/: FakersTest.cpp
test/unittests/interfaces/: DispatcherTest.cpp  ExecutorTest.cpp  storage.cpp
test/unittests/libcodec/: ContractABICodecTest.cpp  ScaleCodecTest.cpp
test/unittests/libprotocol/: FakeBlock.h  FakeBlockHeader.h  FakeTransaction.h  FakeTransactionReceipt.h  PBBlockHeaderTest.cpp  PBBlockTest.cpp  PBTransactionReceiptTest.cpp  PBTransactionTest.cpp  TransactionTest.cpp
test/unittests/libtable/: Entry.cpp  MemoryStorage.h  Table.cpp  TableFactory.cpp  TablePerf.cpp  TestStateStorage.cpp  TestTableStorage.cpp  storage.cpp
test/unittests/libutilities/: Base64Test.cpp  Common.cpp  CommonTest.cpp  ConcurrentCOWTest.cpp  DataConvertUtilityTest.cpp  JsonDataConvertUtilityTest.cpp  RefDataContainerTest.cpp  TestKVStorageHelper.cpp  WorkerTest.cpp
test/unittests/libutils/: HashImpl.h  SignatureImpl.h  TestPromptFixture.cpp  TestPromptFixture.h
test/unittests/main/: main.cpp
testutils/: HashImpl.h  SignatureImpl.h
testutils/crypto/: HashImpl.h  SignatureImpl.h
testutils/faker/: FakeDispatcher.h  FakeFrontService.h  FakeKVStorage.h  FakeLedger.h  FakeScheduler.h  FakeSealer.h  FakeStorage.h  FakeTxPool.h
testutils/protocol/: FakeBlock.h  FakeBlockHeader.h  FakeTransaction.h  FakeTransactionReceipt.h
